# RayTracer

./: .clangd  .gitignore  CLAUDE.md  README  README.md
claudedocs/: MODERNIZATION_ROADMAP.md
src/: BoundingBox.cpp  BoundingBox.h  CMakeCache.txt  CMakeLists.txt  Edge.h  GLViewer.cpp  GLViewer.h  Image.cpp  Image.h  KdTree.cpp  KdTree.h  KdTree2.cpp  KdTree2.h  Light.h  Main.cpp  Makefile.Debug  Makefile.Release  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  QTUtils.cpp  QTUtils.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h  TriangleC.cpp  TriangleC.h  Vec3D.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h  cmake_install.cmake  (+7 more)
src/glad/: gl.c  gl.h
src/models/: b-wing-v2.off  ground_HD.off  minion.off  ram_HD.off
src/release/: moc_QTUtils.cpp  moc_Window.cpp
src/src.app/Contents/: Info.plist
